Imported falling rocks asset

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,9 +128,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 SnapScaleEnabled=False
 CurrentRotGridSize=0
+RotGridEnabled=False
+CurrentPosGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.206933
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.793069
@@ -150,7 +152,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Sprites
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -821,11 +823,11 @@ PaperSpriteComponent.VirtualTexture=True
 PaperSpriteComponent.Navigation=True
 PaperSpriteComponent.Rendering=True
 PaperSpriteComponent.Lighting=True
-PaperSpriteComponent.Collision=True
-PaperSpriteComponent.Physics=True
-PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Collision=False
+PaperSpriteComponent.Physics=False
+PaperSpriteComponent.Materials=False
 PaperSpriteComponent.Sprite=True
-PaperSpriteComponent.TransformCommon=False
+PaperSpriteComponent.TransformCommon=True
 PaperGroupedSpriteActor.TransformCommon=True
 PaperGroupedSpriteActor.Sprite=True
 PaperGroupedSpriteActor.Materials=True
@@ -1046,7 +1048,7 @@ Mushroom_Red_Small_Foliage_C.Tick=True
 FoliageType_Actor.Painting=True
 PaperSpriteComponent.Variable=True
 PaperSpriteComponent.Sockets=True
-PaperSpriteComponent.ComponentTick=True
+PaperSpriteComponent.ComponentTick=False
 PaperSpriteComponent.ComponentReplication=True
 PaperSpriteComponent.Events=True
 Mushroom_Red_Tiny_Blueprint_C.TransformCommon=True
@@ -1989,13 +1991,31 @@ WaterDeathZone_C.Collision=True
 WaterDeathZone_C.Actor=True
 WaterDeathZone_C.Input=True
 WaterDeathZone_C.TransformCommon=True
+FallingRock_C.Tick=True
+FallingRock_C.Replication=True
+FallingRock_C.Rendering=True
+FallingRock_C.Collision=True
+FallingRock_C.Actor=True
+FallingRock_C.Input=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.ComponentTick=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Navigation=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Sprites/falling_rock_tri1.falling_rock_tri1
+OpenAssetsAtExit=/Game/Sprites/falling_rock_tri2.falling_rock_tri2
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/FallingRock.FallingRock
 
 [RootWindow]
-ScreenPosition=X=189.600 Y=156.000
-WindowSize=X=1274.400 Y=714.400
+ScreenPosition=X=189.000 Y=156.000
+WindowSize=X=1274.000 Y=714.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2012,7 +2032,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -2881,26 +2901,26 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
-MRUItem1=/Game/ThirdPersonBP/Blueprints/RobotFly
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Crane
-MRUItem3=/Game/Sprites/treeline_bush1
-MRUItem4=/Game/Sprites/bridge_rope_frayed
-MRUItem5=/Game/Sprites/SourceTextures/bridge_rope_frayed
-MRUItem6=/Game/Sprites/bridge_rope
-MRUItem7=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
-MRUItem8=/Game/Sprites/AbilityUpgrades/ice-upgrade
-MRUItem9=/Game/Sprites/SourceTextures/ice-upgrade_1
-MRUItem10=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump
-MRUItem11=/Game/ThirdPersonBP/Blueprints/FlyProjectile
-MRUItem12=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
-MRUItem13=/Game/Sprites/AbilityUpgrades/sky-upgrade
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem15=/Game/Sprites/FoliageActors/treeline_bush2_Blueprint
-MRUItem16=/Game/Sprites/FoliageActors/treeline_bush1_Blueprint
-MRUItem17=/Game/Sprites/FoliageActors/rock4_Blueprint
-MRUItem18=/Game/Sprites/FoliageActors/rock3_Blueprint
-MRUItem19=/Game/Sprites/FoliageActors/rock2_Blueprint
+MRUItem0=/Game/Sprites/falling_rock_tri2
+MRUItem1=/Game/Sprites/falling_rock_tri1
+MRUItem2=/Game/ThirdPersonBP/Blueprints/FallingRock
+MRUItem3=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
+MRUItem4=/Game/ThirdPersonBP/Blueprints/RobotFly
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem6=/Game/Sprites/treeline_bush1
+MRUItem7=/Game/Sprites/bridge_rope_frayed
+MRUItem8=/Game/Sprites/SourceTextures/bridge_rope_frayed
+MRUItem9=/Game/Sprites/bridge_rope
+MRUItem10=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
+MRUItem11=/Game/Sprites/AbilityUpgrades/ice-upgrade
+MRUItem12=/Game/Sprites/SourceTextures/ice-upgrade_1
+MRUItem13=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump
+MRUItem14=/Game/ThirdPersonBP/Blueprints/FlyProjectile
+MRUItem15=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
+MRUItem16=/Game/Sprites/AbilityUpgrades/sky-upgrade
+MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem18=/Game/Sprites/FoliageActors/treeline_bush2_Blueprint
+MRUItem19=/Game/Sprites/FoliageActors/treeline_bush1_Blueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
@@ -2928,7 +2948,7 @@ None=======
 /Game/Sprites/Mushroom_Trunk_Medium.Mushroom_Trunk_Medium=1
 /Game/Sprites/Mushroom_Red_Top.Mushroom_Red_Top=1
 /Game/Sprites/SourceTextures/crane.crane=0
-/Game/ThirdPersonBP/Blueprints/Crane.Crane=1
+/Game/ThirdPersonBP/Blueprints/Crane.Crane=0
 /Game/Sprites/Mushroom_Small_Top.Mushroom_Small_Top=1
 /Game/Sprites/Flipbooks/Crane_Head_Flipbook.Crane_Head_Flipbook=1
 /Game/Ground.Ground=1
@@ -3117,7 +3137,17 @@ None=======
 /Game/Sprites/bridge_rope.bridge_rope=1
 /Game/Sprites/SourceTextures/bridge_rope_frayed.bridge_rope_frayed=1
 /Game/Sprites/bridge_rope_frayed.bridge_rope_frayed=1
-/Game/ThirdPersonBP/Blueprints/WaterDeathZone.WaterDeathZone=1
+/Game/ThirdPersonBP/Blueprints/WaterDeathZone.WaterDeathZone=0
+/Game/Sprites/SourceTextures/fallingtri5.fallingtri5=0
+/Game/Sprites/SourceTextures/fallingtri4.fallingtri4=0
+/Game/Sprites/SourceTextures/fallingtri3.fallingtri3=0
+/Game/Sprites/SourceTextures/fallingtri2.fallingtri2=0
+/Game/Sprites/SourceTextures/fallingtri1.fallingtri1=0
+/Game/Sprites/falling_rock_tri5.falling_rock_tri5=0
+/Game/Sprites/falling_rock_tri4.falling_rock_tri4=0
+/Game/Sprites/falling_rock_tri3.falling_rock_tri3=0
+/Game/Sprites/falling_rock_tri2.falling_rock_tri2=0
+/Game/Sprites/falling_rock_tri1.falling_rock_tri1=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3156,6 +3186,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sprites/falling_rock_tri2.falling_rock_tri2;
+RecentlyPlaced=/Game/Sprites/falling_rock_tri1.falling_rock_tri1;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/WaterDeathZone.WaterDeathZone;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Crane.Crane;
 RecentlyPlaced=/Game/Sprites/treeline_small1.treeline_small1;
@@ -3174,8 +3206,6 @@ RecentlyPlaced=/Game/Sprites/bridge_plank_broken.bridge_plank_broken;
 RecentlyPlaced=/Game/Sprites/bridge_stake.bridge_stake;
 RecentlyPlaced=/Game/Sprites/bridge_plank.bridge_plank;
 RecentlyPlaced=/Game/Sprites/leafpile1.leafpile1;
-RecentlyPlaced=/Game/Sprites/leafpile2.leafpile2;
-RecentlyPlaced=/Game/Sprites/rock4.rock4;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -3209,7 +3239,7 @@ PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.N
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.AxisConfig.AxisConfig[23]\" \"Object.Bindings.AxisConfig.AxisConfig[24]\" \"Object.Bindings.AxisConfig.AxisConfig[25]\" \"Object.Bindings.AxisConfig.AxisConfig[26]\" \"Object.Bindings.AxisConfig.AxisConfig[27]\" \"Object.Bindings.AxisConfig.AxisConfig[28]\" \"Object.Bindings.AxisConfig.AxisConfig[29]\" \"Object.Bindings.AxisConfig.AxisConfig[30]\" \"Object.Bindings.AxisConfig.AxisConfig[31]\" \"Object.Bindings.AxisConfig.AxisConfig[32]\" \"Object.Bindings.AxisConfig.AxisConfig[33]\" \"Object.Bindings.AxisConfig.AxisConfig[34]\" \"Object.Bindings.AxisConfig.AxisConfig[35]\" \"Object.Bindings.AxisConfig.AxisConfig[36]\" \"Object.Bindings.AxisConfig.AxisConfig[37]\" \"Object.Bindings.AxisConfig.AxisConfig[38]\" \"Object.Bindings.AxisConfig.AxisConfig[39]\" \"Object.Bindings.AxisConfig.AxisConfig[40]\" \"Object.Bindings.AxisConfig.AxisConfig[41]\" \"Object.Bindings.AxisConfig.AxisConfig[42]\" \"Object.Bindings.AxisConfig.AxisConfig[43]\" \"Object.Bindings.AxisConfig.AxisConfig[44]\" \"Object.Bindings.AxisConfig.AxisConfig[45]\" \"Object.Bindings.AxisConfig.AxisConfig[46]\" \"Object.Bindings.AxisConfig.AxisConfig[47]\" \"Object.Bindings.AxisConfig.AxisConfig[48]\" \"Object.Bindings.AxisConfig.AxisConfig[49]\" \"Object.Bindings.AxisConfig.AxisConfig[50]\" \"Object.Bindings.AxisConfig.AxisConfig[51]\" \"Object.Bindings.AxisConfig.AxisConfig[52]\" \"Object.Bindings.AxisConfig.AxisConfig[53]\" \"Object.Bindings.AxisConfig.AxisConfig[54]\" \"Object.Bindings.AxisConfig.AxisConfig[55]\" \"Object.Bindings.AxisConfig.AxisConfig[56]\" \"Object.Bindings.AxisConfig.AxisConfig[57]\" \"Object.Bindings.AxisConfig.AxisConfig[58]\" \"Object.Bindings.AxisConfig.AxisConfig[59]\" \"Object.Bindings.AxisConfig.AxisConfig[60]\" \"Object.Bindings.AxisConfig.AxisConfig[61]\" \"Object.Bindings.AxisConfig.AxisConfig[62]\" \"Object.Bindings.AxisConfig.AxisConfig[63]\" \"Object.Bindings.AxisConfig.AxisConfig[64]\" \"Object.Bindings.AxisConfig.AxisConfig[65]\" \"Object.Bindings.AxisConfig.AxisConfig[66]\" \"Object.Bindings.AxisConfig.AxisConfig[67]\" \"Object.Bindings.AxisConfig.AxisConfig[68]\" \"Object.Bindings.AxisConfig.AxisConfig[69]\" \"Object.Bindings.AxisConfig.AxisConfig[70]\" \"Object.Bindings.AxisConfig.AxisConfig[71]\" \"Object.Bindings.AxisConfig.AxisConfig[72]\" \"Object.Bindings.AxisConfig.AxisConfig[73]\" \"Object.Bindings.AxisConfig.AxisConfig[74]\" \"Object.Bindings.AxisConfig.AxisConfig[75]\" \"Object.Bindings.AxisConfig.AxisConfig[76]\" \"Object.Bindings.AxisConfig.AxisConfig[77]\" \"Object.Bindings.AxisConfig.AxisConfig[78]\" \"Object.Bindings.AxisConfig.AxisConfig[79]\" \"Object.Bindings.AxisConfig.AxisConfig[80]\" \"Object.Bindings.AxisConfig.AxisConfig[81]\" \"Object.Bindings.AxisConfig.AxisConfig[82]\" \"Object.Bindings.AxisConfig.AxisConfig[83]\" \"Object.Bindings.AxisConfig.AxisConfig[84]\" \"Object.Bindings.AxisConfig.AxisConfig[85]\" \"Object.Bindings.AxisConfig.AxisConfig[86]\" \"Object.Bindings.AxisConfig.AxisConfig[87]\" \"Object.Bindings.AxisConfig.AxisConfig[88]\" \"Object.Bindings.AxisConfig.AxisConfig[89]\" \"Object.Bindings.AxisConfig.AxisConfig[90]\" \"Object.Bindings.AxisConfig.AxisConfig[91]\" \"Object.Bindings.AxisConfig.AxisConfig[92]\" \"Object.Bindings.AxisConfig.AxisConfig[93]\" \"Object.Bindings.AxisConfig.AxisConfig[94]\" \"Object.Bindings.AxisConfig.AxisConfig[95]\" \"Object.Bindings.AxisConfig.AxisConfig[96]\" \"Object.Bindings.ActionMappings.ActionMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" \"Object.Bindings.AxisMappings.AxisMappings[10]\" \"Object.Bindings.AxisMappings.AxisMappings[11]\" \"Object.Bindings.AxisMappings.AxisMappings[12]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" \"Object.Bindings.AxisMappings.AxisMappings[14]\" \"Object.Bindings.AxisMappings.AxisMappings[15]\" \"Object.Bindings.AxisMappings.AxisMappings[16]\" \"Object.Bindings.AxisMappings.AxisMappings[17]\" \"Object.Bindings.AxisMappings.AxisMappings[18]\" \"Object.Bindings.AxisMappings.AxisMappings[19]\" \"Object.Bindings.AxisMappings.AxisMappings[20]\" \"Object.Bindings.AxisMappings.AxisMappings[21]\" \"Object.Bindings.AxisMappings.AxisMappings[22]\" \"Object.Bindings.AxisMappings.AxisMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[24]\" \"Object.Bindings.AxisMappings.AxisMappings[25]\" \"Object.Bindings.AxisMappings.AxisMappings[26]\" \"Object.Bindings.AxisMappings.AxisMappings[27]\" \"Object.Bindings.AxisMappings.AxisMappings[28]\" \"Object.Bindings.AxisMappings.AxisMappings[29]\" \"Object.Bindings.AxisMappings.AxisMappings[30]\" \"Object.Bindings.AxisMappings.AxisMappings[31]\" \"Object.Console.ConsoleKeys\" "
 Image="\"Object.Appearance.Brush\" "
 PaperSprite="\"Object.Sprite.CustomPivotPoint\" \"Object.Rendering.RenderGeometry\" "
-PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PaperSpriteActor=
 PaperGroupedSpriteActor=
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression="\"Object.DefaultValue\" "
@@ -3220,9 +3250,9 @@ Crane_C=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
-PaperSpriteComponent=
+PaperSpriteComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
 SceneComponent=
 grass_clump_2_Sprite_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Bush4_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -3301,6 +3331,7 @@ LinuxTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 MacTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" \"Object.Audio.Audio|CookOverrides\" "
 MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
+ArrowComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3542,7 +3573,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
 ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
 CharacterMovementComponent=
-Crane_C=ThirdPersonCharacter_C.Rendering.LOD,
+Crane_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 ModelingToolsEditorModeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,
@@ -3553,11 +3584,11 @@ SceneComponent=
 BrushComponent=
 Actor=ThirdPersonCharacter_C.Rendering.LOD,
 BP_Sky_Sphere_C=ThirdPersonCharacter_C.Rendering.LOD,
-Brush=ThirdPersonCharacter_C.Rendering.LOD,
+Brush=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 Vine_Blueprint_C=ThirdPersonCharacter_C.Rendering.LOD,
 Landscape=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 PostProcessVolume=ThirdPersonCharacter_C.Rendering.LOD,
-BlockingVolume=ThirdPersonCharacter_C.Rendering.LOD,
+BlockingVolume=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 BarrierTree_C=ThirdPersonCharacter_C.Rendering.LOD,
 RobotFly_C=ThirdPersonCharacter_C.Rendering.LOD,
 PropertyWrapper=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
