--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -2009,13 +2009,10 @@ PrimitiveComponent.Cooking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Sprites/falling_rock_tri1.falling_rock_tri1
-OpenAssetsAtExit=/Game/Sprites/falling_rock_tri2.falling_rock_tri2
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/FallingRock.FallingRock
 
 [RootWindow]
-ScreenPosition=X=189.000 Y=156.000
-WindowSize=X=1274.000 Y=714.000
+ScreenPosition=X=188.667 Y=156.000
+WindowSize=X=1273.333 Y=713.333
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2032,7 +2029,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Users/danny/Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -2901,29 +2898,29 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sprites/falling_rock_tri2
-MRUItem1=/Game/Sprites/falling_rock_tri1
-MRUItem2=/Game/ThirdPersonBP/Blueprints/FallingRock
-MRUItem3=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
-MRUItem4=/Game/ThirdPersonBP/Blueprints/RobotFly
-MRUItem5=/Game/ThirdPersonBP/Blueprints/Crane
-MRUItem6=/Game/Sprites/treeline_bush1
-MRUItem7=/Game/Sprites/bridge_rope_frayed
-MRUItem8=/Game/Sprites/SourceTextures/bridge_rope_frayed
-MRUItem9=/Game/Sprites/bridge_rope
-MRUItem10=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
-MRUItem11=/Game/Sprites/AbilityUpgrades/ice-upgrade
-MRUItem12=/Game/Sprites/SourceTextures/ice-upgrade_1
-MRUItem13=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump
-MRUItem14=/Game/ThirdPersonBP/Blueprints/FlyProjectile
-MRUItem15=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
-MRUItem16=/Game/Sprites/AbilityUpgrades/sky-upgrade
-MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/Sprites/falling_rock_tri2
+MRUItem2=/Game/Sprites/falling_rock_tri1
+MRUItem3=/Game/ThirdPersonBP/Blueprints/FallingRock
+MRUItem4=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
+MRUItem5=/Game/ThirdPersonBP/Blueprints/RobotFly
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem7=/Game/Sprites/treeline_bush1
+MRUItem8=/Game/Sprites/bridge_rope_frayed
+MRUItem9=/Game/Sprites/SourceTextures/bridge_rope_frayed
+MRUItem10=/Game/Sprites/bridge_rope
+MRUItem11=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
+MRUItem12=/Game/Sprites/AbilityUpgrades/ice-upgrade
+MRUItem13=/Game/Sprites/SourceTextures/ice-upgrade_1
+MRUItem14=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump
+MRUItem15=/Game/ThirdPersonBP/Blueprints/FlyProjectile
+MRUItem16=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
+MRUItem17=/Game/Sprites/AbilityUpgrades/sky-upgrade
 MRUItem18=/Game/Sprites/FoliageActors/treeline_bush2_Blueprint
 MRUItem19=/Game/Sprites/FoliageActors/treeline_bush1_Blueprint
 
 [AssetEditorToolkitTabLocation]
-/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/Flipbooks/Art/mouse_Flipbook.mouse_Flipbook=1
 /Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=1
 None=======
@@ -3186,6 +3183,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump.AbilityPickup_SuperJump;
 RecentlyPlaced=/Game/Sprites/falling_rock_tri2.falling_rock_tri2;
 RecentlyPlaced=/Game/Sprites/falling_rock_tri1.falling_rock_tri1;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/WaterDeathZone.WaterDeathZone;
@@ -3205,7 +3203,6 @@ RecentlyPlaced=/Game/Sprites/boulder__Sprite.boulder__Sprite;
 RecentlyPlaced=/Game/Sprites/bridge_plank_broken.bridge_plank_broken;
 RecentlyPlaced=/Game/Sprites/bridge_stake.bridge_stake;
 RecentlyPlaced=/Game/Sprites/bridge_plank.bridge_plank;
-RecentlyPlaced=/Game/Sprites/leafpile1.leafpile1;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -3243,9 +3240,9 @@ PaperSpriteActor=
 PaperGroupedSpriteActor=
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression="\"Object.DefaultValue\" "
-ThirdPersonCharacter_C=
-Character=
-Pawn=
+ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
+Character="\"Object.CharacterMovement\" "
+Pawn="\"Object.CharacterMovement\" "
 Crane_C=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
@@ -3571,7 +3568,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
-ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
+ThirdPersonCharacter_C=
 CharacterMovementComponent=
 Crane_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -3600,7 +3597,7 @@ AbilityPickup_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultV
 AbilityPickup_Parent_C=
 MovementComponent=
 LightmassImportanceVolume=ThirdPersonCharacter_C.Rendering.LOD,
-AbilityPickup_SuperJump_C=ThirdPersonCharacter_C.Rendering.LOD,
+AbilityPickup_SuperJump_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 MeshComponent=
 AbilityPickup_Ice_C=ThirdPersonCharacter_C.Rendering.LOD,
 
