--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Sprites
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -179,6 +179,29 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=FrameRate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/Maps/Swamp
@@ -2006,14 +2029,40 @@ PrimitiveComponent.Tags=True
 PrimitiveComponent.ComponentReplication=True
 PrimitiveComponent.Variable=True
 PrimitiveComponent.Cooking=True
+EditorParentPlayerListObj.AnimGraphOverrides=True
+PlayerAnimator_C.Default=True
+PlayerAnimator_C.RootMotion=True
+PlayerAnimator_C.Notifies=True
+BoneProxy.Transform=True
+BoneProxy.Bone=True
+BoneProxy.Reference Transform=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+K2Node_MakeStruct.PinOptions=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=188.667 Y=156.000
-WindowSize=X=1273.333 Y=713.333
-InitiallyMaximized=True
+ScreenPosition=X=449.000 Y=98.000
+WindowSize=X=1273.000 Y=713.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2898,26 +2947,26 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Sprites/falling_rock_tri2
-MRUItem2=/Game/Sprites/falling_rock_tri1
-MRUItem3=/Game/ThirdPersonBP/Blueprints/FallingRock
-MRUItem4=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
-MRUItem5=/Game/ThirdPersonBP/Blueprints/RobotFly
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Crane
-MRUItem7=/Game/Sprites/treeline_bush1
-MRUItem8=/Game/Sprites/bridge_rope_frayed
-MRUItem9=/Game/Sprites/SourceTextures/bridge_rope_frayed
-MRUItem10=/Game/Sprites/bridge_rope
-MRUItem11=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
-MRUItem12=/Game/Sprites/AbilityUpgrades/ice-upgrade
-MRUItem13=/Game/Sprites/SourceTextures/ice-upgrade_1
-MRUItem14=/Game/ThirdPersonBP/Blueprints/AbilityPickup_SuperJump
-MRUItem15=/Game/ThirdPersonBP/Blueprints/FlyProjectile
-MRUItem16=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Parent
-MRUItem17=/Game/Sprites/AbilityUpgrades/sky-upgrade
-MRUItem18=/Game/Sprites/FoliageActors/treeline_bush2_Blueprint
-MRUItem19=/Game/Sprites/FoliageActors/treeline_bush1_Blueprint
+MRUItem0=/Game/Sprites/mouse_glide
+MRUItem1=/Game/ThirdPersonBP/Blueprints/Crane
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem3=/Game/Sprites/Mushroom_Brown_Small1
+MRUItem4=/Game/Sprites/mouse_idle_back
+MRUItem5=/Game/Sprites/SourceTextures/mouse
+MRUItem6=/Game/Sprites/SourceTextures/mushroom-skirt
+MRUItem7=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem8=/Game/ThirdPersonBP/Blueprints/PlayerAnimator
+MRUItem9=/Game/Sprites/falling_rock_tri2
+MRUItem10=/Game/Sprites/falling_rock_tri1
+MRUItem11=/Game/ThirdPersonBP/Blueprints/FallingRock
+MRUItem12=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
+MRUItem13=/Game/ThirdPersonBP/Blueprints/RobotFly
+MRUItem14=/Game/Sprites/treeline_bush1
+MRUItem15=/Game/Sprites/bridge_rope_frayed
+MRUItem16=/Game/Sprites/SourceTextures/bridge_rope_frayed
+MRUItem17=/Game/Sprites/bridge_rope
+MRUItem18=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
+MRUItem19=/Game/Sprites/AbilityUpgrades/ice-upgrade
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -3145,6 +3194,12 @@ None=======
 /Game/Sprites/falling_rock_tri3.falling_rock_tri3=0
 /Game/Sprites/falling_rock_tri2.falling_rock_tri2=0
 /Game/Sprites/falling_rock_tri1.falling_rock_tri1=0
+/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=1
+/Game/Sprites/SourceTextures/mouse.mouse=0
+/Game/Sprites/mouse_glide.mouse_glide=1
+/Game/Sprites/mouse_dead.mouse_dead=1
+/Game/Sprites/mouse_idle_front_s.mouse_idle_front_s=1
+/Game/Sprites/mouse_idle_back_s.mouse_idle_back_s=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3213,18 +3268,18 @@ InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+Brush=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Object=
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Clip="\"Object.Settings\" "
-CharacterMovementComponent=
-PawnMovementComponent=
-NavMovementComponent=
-MovementComponent=
+CharacterMovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
+PawnMovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
+NavMovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
+MovementComponent="\"Object.Velocity\" \"Object.Tags.ComponentTags\" "
 ActorComponent=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
@@ -3240,16 +3295,16 @@ PaperSpriteActor=
 PaperGroupedSpriteActor=
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression="\"Object.DefaultValue\" "
-ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
-Character="\"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" "
+ThirdPersonCharacter_C="\"Object.dyingSprite\" "
+Character="\"Object.dyingSprite\" "
+Pawn="\"Object.dyingSprite\" "
 Crane_C=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 PaperSpriteComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 grass_clump_2_Sprite_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Bush4_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -3299,7 +3354,7 @@ Vine8_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance
 Vine9_Blueprint_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 RobotFly_C=
-CapsuleComponent=
+CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 PaperFlipbookComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
@@ -3329,6 +3384,12 @@ MacTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" \"Object.Audio.Audio|CookOverrides\" "
 MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
 ArrowComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+SkeletalMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+CameraComponent="\"Object.Tags.ComponentTags\" "
+SpringArmComponent="\"Object.Tags.ComponentTags\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3568,7 +3629,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Glide,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
-ThirdPersonCharacter_C=
+ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
 CharacterMovementComponent=
 Crane_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -3578,7 +3639,7 @@ Spawnpoint_C=ThirdPersonCharacter_C.Rendering.LOD,
 Spawnpoint_Start_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 CapsuleComponent=
 SceneComponent=
-BrushComponent=
+BrushComponent=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 Actor=ThirdPersonCharacter_C.Rendering.LOD,
 BP_Sky_Sphere_C=ThirdPersonCharacter_C.Rendering.LOD,
 Brush=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
@@ -3595,7 +3656,7 @@ FlyProjectile_C=PaperSpriteComponent.Collision.Collision,
 PaperFlipbookComponent=PaperFlipbookComponent.Physics.ConstraintsGroup,PaperFlipbookComponent.Rendering.TextureStreaming,PaperFlipbookComponent.Rendering.LOD,
 AbilityPickup_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 AbilityPickup_Parent_C=
-MovementComponent=
+MovementComponent=K2Node_VariableGet.DefaultValueCategory.None,ThirdPersonCharacter_C.Rendering.LOD,
 LightmassImportanceVolume=ThirdPersonCharacter_C.Rendering.LOD,
 AbilityPickup_SuperJump_C=ThirdPersonCharacter_C.Rendering.LOD,K2Node_VariableGet.DefaultValueCategory.None,
 MeshComponent=
@@ -3661,7 +3722,7 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
@@ -3718,4 +3779,43 @@ bAutoDeleteAssets=True
 bDetectChangesOnStartup=True
 bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
