Fixing autosave thing

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Sprites
+ContentBrowserTab2.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -2058,11 +2058,12 @@ K2Node_MakeStruct.PinOptions=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Crane.Crane
 
 [RootWindow]
 ScreenPosition=X=449.000 Y=98.000
 WindowSize=X=1273.000 Y=713.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2078,7 +2079,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/danny/Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -2940,6 +2941,10 @@ ModelingToolsEditorMode.TimeStamp=2021.03.24-18.25.46
 ModelingToolsEditorMode.LastCompileMethod=External
 HairStrandsEditor.TimeStamp=2021.03.24-18.26.05
 HairStrandsEditor.LastCompileMethod=External
+SkeletonEditor.TimeStamp=2021.03.09-13.24.01
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2021.03.09-13.23.55
+PinnedCommandList.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Swamp
@@ -2947,26 +2952,26 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/Levels/MainMenu/MainMenu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sprites/mouse_glide
+MRUItem0=/Game/ThirdPersonBP/Blueprints/FallingRock
 MRUItem1=/Game/ThirdPersonBP/Blueprints/Crane
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/Sprites/Mushroom_Brown_Small1
-MRUItem4=/Game/Sprites/mouse_idle_back
-MRUItem5=/Game/Sprites/SourceTextures/mouse
-MRUItem6=/Game/Sprites/SourceTextures/mushroom-skirt
-MRUItem7=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem8=/Game/ThirdPersonBP/Blueprints/PlayerAnimator
-MRUItem9=/Game/Sprites/falling_rock_tri2
-MRUItem10=/Game/Sprites/falling_rock_tri1
-MRUItem11=/Game/ThirdPersonBP/Blueprints/FallingRock
-MRUItem12=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
-MRUItem13=/Game/ThirdPersonBP/Blueprints/RobotFly
-MRUItem14=/Game/Sprites/treeline_bush1
-MRUItem15=/Game/Sprites/bridge_rope_frayed
-MRUItem16=/Game/Sprites/SourceTextures/bridge_rope_frayed
-MRUItem17=/Game/Sprites/bridge_rope
-MRUItem18=/Game/ThirdPersonBP/Blueprints/AbilityPickup_Ice
-MRUItem19=/Game/Sprites/AbilityUpgrades/ice-upgrade
+MRUItem2=/Game/Sprites/n_mouse_dead
+MRUItem3=/Game/Sprites/SourceTextures/mouse
+MRUItem4=/Game/Sprites/mouse_dead
+MRUItem5=/Game/Sprites/mouse_glide
+MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem7=/Game/Sprites/Mushroom_Brown_Small1
+MRUItem8=/Game/Sprites/mouse_idle_back
+MRUItem9=/Game/Sprites/SourceTextures/mushroom-skirt
+MRUItem10=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem11=/Game/ThirdPersonBP/Blueprints/PlayerAnimator
+MRUItem12=/Game/Sprites/falling_rock_tri2
+MRUItem13=/Game/Sprites/falling_rock_tri1
+MRUItem14=/Game/ThirdPersonBP/Blueprints/WaterDeathZone
+MRUItem15=/Game/ThirdPersonBP/Blueprints/RobotFly
+MRUItem16=/Game/Sprites/treeline_bush1
+MRUItem17=/Game/Sprites/bridge_rope_frayed
+MRUItem18=/Game/Sprites/SourceTextures/bridge_rope_frayed
+MRUItem19=/Game/Sprites/bridge_rope
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -3200,6 +3205,11 @@ None=======
 /Game/Sprites/mouse_dead.mouse_dead=1
 /Game/Sprites/mouse_idle_front_s.mouse_idle_front_s=1
 /Game/Sprites/mouse_idle_back_s.mouse_idle_back_s=1
+/Game/Sprites/n_mouse_dead.n_mouse_dead=1
+/Game/Sprites/n_mouse_idle_back.n_mouse_idle_back=1
+/Game/Sprites/n_mouse_idle_front.n_mouse_idle_front=1
+/Game/Sprites/n_mouse_glide.n_mouse_glide=1
+/Game/ThirdPersonBP/Blueprints/FallingRock.FallingRock=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3722,7 +3732,7 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
